update jobs api
